--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -8,6 +8,7 @@
   width: 100%;
   font-size: 1.5rem;
   padding: 20px 30px;
+  padding-right: 65px;
   border-radius: 50px;
   outline: 0;
   border: none;
